--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,8 @@
     "ember-load-initializers": "stefanpenner/ember-load-initializers#0.0.2",
     "ember-qunit-notifications": "0.0.4",
     "ember-cli-test-loader": "rwjblue/ember-cli-test-loader#0.0.4",
-    "ember-pouch": "~0.1.6",
+    "firebase": "^1.0.0",
+    "emberfire": "~1.2.1",
     "moment": "~2.7.0",
     "marked": "~0.3.2",
     "bootstrap": "~3.2.0"
