--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "ember-cli-qunit": "0.0.5",    
     "ember-cli-ic-ajax": "0.1.1",
     "express": "^4.8.8",
-    "glob": "^4.0.5"
+    "glob": "^4.0.5",
+    "emberfire": "git://github.com/firebase/emberfire#v1.2.1",
   }
 }
