--- a/package.json
+++ b/package.json
@@ -28,6 +28,6 @@
     "ember-cli-ic-ajax": "0.1.1",
     "express": "^4.8.8",
     "glob": "^4.0.5",
-    "emberfire": "git://github.com/firebase/emberfire#v1.2.1",
+    "emberfire": "git://github.com/firebase/emberfire#v1.2.1"
   }
 }
